-- added a monitor to know when there are tasks running in the queue -- set cursor on form to hourglass as a simplistic way to indicate activity occurring.

--- a/source/gui_mainform.lfm
+++ b/source/gui_mainform.lfm
@@ -67,4 +67,11 @@ object MainForm: TMainForm
     Title = 'Select Stew Project Directory'
     left = 24
   end
+  object CloseTimeoutTimer: TTimer
+    Enabled = False
+    Interval = 5000
+    OnTimer = CloseTimeoutTimerTimer
+    left = 24
+    top = 120
+  end
 end
