--- a/source/gui_mainform.lfm
+++ b/source/gui_mainform.lfm
@@ -4,6 +4,8 @@ object MainForm: TMainForm
   Top = 201
   Width = 611
   Caption = 'Stew'
+  ClientHeight = 429
+  ClientWidth = 611
   Menu = MainMenu
   OnClose = FormClose
   OnCloseQuery = FormCloseQuery
@@ -12,6 +14,13 @@ object MainForm: TMainForm
   OnShow = FormShow
   Position = poDefault
   LCLVersion = '1.2.6.0'
+  object MainStatus: TStatusBar
+    Left = 0
+    Height = 20
+    Top = 409
+    Width = 611
+    Panels = <>
+  end
   object MainMenu: TMainMenu
     left = 24
     top = 56
