--- a/source/gui_mainform.lfm
+++ b/source/gui_mainform.lfm
@@ -11,6 +11,7 @@ object MainForm: TMainForm
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
   OnDestroy = FormDestroy
+  OnResize = FormResize
   OnShow = FormShow
   Position = poDefault
   LCLVersion = '1.2.6.0'
@@ -20,6 +21,9 @@ object MainForm: TMainForm
     Top = 409
     Width = 611
     Panels = <>
+    SimplePanel = False
+    SizeGrip = False
+    Visible = False
   end
   object MainMenu: TMainMenu
     left = 24
