--- a/source/gui_editorframe.lfm
+++ b/source/gui_editorframe.lfm
@@ -19,6 +19,19 @@ object EditorFrame: TEditorFrame
     ClientHeight = 26
     ClientWidth = 320
     TabOrder = 0
+    object LeftHandToolbar: TToolBar
+      Left = 0
+      Height = 26
+      Top = 0
+      Width = 278
+      Align = alClient
+      AutoSize = True
+      Caption = 'LeftHandToolbar'
+      EdgeBorders = []
+      ShowCaptions = True
+      TabOrder = 1
+      Wrapable = False
+    end
     object RightHandToolbar: TToolBar
       Left = 278
       Height = 26
@@ -37,18 +50,6 @@ object EditorFrame: TEditorFrame
         Caption = 'Close'
         OnClick = CloseButtonClick
       end
-    end
-    object LeftHandToolbar: TToolBar
-      Left = 0
-      Height = 26
-      Top = 0
-      Width = 278
-      Align = alClient
-      AutoSize = True
-      Caption = 'LeftHandToolbar'
-      EdgeBorders = []
-      ShowCaptions = True
-      TabOrder = 1
     end
   end
 end
